--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "axios": "^0.25.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "react-bootstrap": "^2.1.2"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
